Fix notice height when sidebar is collapsed (#46900)

--- a/client/my-sites/sidebar-unified/style.scss
+++ b/client/my-sites/sidebar-unified/style.scss
@@ -214,6 +214,7 @@ $font-size: rem( 14px );
 			&.is-compact {
 				margin: 0;
 				align-items: center;
+				min-height: 34px;
 			}
 
 			.notice__icon-wrapper {
